// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`provideSubTreeRecursive rendering should match snapshot 1`] = `
<div>
  <ContextProvider>
    <ContextProvider>
      <ContextProvider>
        <div>
           bottom 
        </div>
      </ContextProvider>
    </ContextProvider>
  </ContextProvider>
</div>
`;

exports[`provideSubTreeRecursive rendering should match snapshot 2`] = `
<div>
  <ContextProvider
    value={
      Object {
        "first": "is",
      }
    }
  >
    <ContextProvider
      value={
        Object {
          "second": "is",
        }
      }
    >
      <ContextProvider
        value={
          Object {
            "first": "is",
          }
        }
      >
        <div>
           bottom 
        </div>
      </ContextProvider>
    </ContextProvider>
  </ContextProvider>
</div>
`;
